--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -657,11 +657,11 @@ footer {
         align-items: center;
         background-color: #FFFFFF;
         border-radius: 100px;
-        height: 38px;
+        min-height: 38px;
         font-size: 16px;
         line-height: 22px;
         color: #252525;
-        padding: 0px 16px;
+        padding: 8px 16px;
         img{
             margin-right: 10px;
         }
@@ -686,4 +686,87 @@ footer {
         }
     }
 }
+
+.services{
+    margin-bottom: 40px;
+    &__box{
+        background-color: #FFFFFF;
+        box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.06);
+        border-radius: 24px;
+        overflow: hidden;
+        background-image: url(../images/services.jpg);
+        background-position: right;
+        background-repeat: no-repeat;
+        padding: 40px 40px 27px;
+    }
+    &__title{
+        margin-bottom: 16px;
+    }
+    &__text{
+        margin-bottom: 20px;
+        color: #595959;
+    }
+    &__items{
+        max-width: 869px;
+        &-wrapper{
+            display: flex;
+        }
+    }
+    &__slider{
+        display: none;
+        overflow: hidden;
+        padding-top: 16px;
+        padding-bottom: 30px;
+        position: relative;
+        .swiper-pagination{
+            bottom: 8px;
+        }
+        .swiper-slide{
+            box-sizing: border-box;
+            padding: 0 16px;
+        }
+    }
+    &__item{
+        flex-shrink: unset;
+        max-width: 100%;
+        width: 100%;
+        padding: 16px;
+        & + &{
+            margin-left: 16px;
+        }
+        &-title{
+            display: flex;
+            align-items: center;
+            img{
+                margin-right: 4px;
+            }
+        }
+        &-text{
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 22px;
+            margin-top: 10px;
+        }
+    }
+}
+
+// SWIPER
+.swiper-pagination{
+    line-height: 0;
+}
+.swiper-pagination-bullet{
+    width: 10px;
+    height: 10px;
+    border: 1px solid transparent;
+    transition: border-color .3s;
+}
+.swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet{
+    margin: 0 2px;
+}
+.swiper-pagination-bullet-active{
+    background-color: #1374CF;
+    border-color: #1374CF;
+}
+// SWIPER
+
 @import "media";
