--- a/src/templates/_header.html
+++ b/src/templates/_header.html
@@ -1,3 +1,28 @@
 <header class="header">
-	
+    <div class="container">
+        <div class="header__inner ">
+            <div class="bahandi"></div>
+            <div class="header__logo">
+                <a href="#"><img src="images/logo.png" alt=""></a>
+            </div>
+            <ul class="header__nav">
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Конструктор</a></li>
+                <li><a href="#">Пакеты</a></li>
+                <li><a href="#">Как мы работаем</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Отзывы</a></li>
+                <li><a href="#">Блог</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+            <a class="header__tel" href="tel:+77750075959">+7 (775) 007 59 59</a>
+            <button class="header__btn">
+                <svg width="24" height="25" viewBox="0 0 24 25"  xmlns="http://www.w3.org/2000/svg">
+                    <path class="path" fill-rule="evenodd" clip-rule="evenodd" d="M11.9993 2.75C9.51402 2.75 7.4993 4.76472 7.4993 7.25C7.4993 9.73528 9.51402 11.75 11.9993 11.75C14.4846 11.75 16.4993 9.73528 16.4993 7.25C16.4993 4.76472 14.4846 2.75 11.9993 2.75ZM8.9993 7.25C8.9993 5.59315 10.3424 4.25 11.9993 4.25C13.6562 4.25 14.9993 5.59315 14.9993 7.25C14.9993 8.90685 13.6562 10.25 11.9993 10.25C10.3424 10.25 8.9993 8.90685 8.9993 7.25Z"/>
+                    <path class="path" fill-rule="evenodd" clip-rule="evenodd" d="M11.9993 12.5C8.54662 12.5 6.41198 13.574 5.16249 15.1121C3.93741 16.6202 3.67359 18.4419 3.66993 19.7354C3.66554 21.2895 5.01651 22.25 6.36837 22.25H17.6302C18.9821 22.25 20.3331 21.2895 20.3287 19.7354C20.325 18.4419 20.0612 16.6202 18.8361 15.1121C17.5866 13.574 15.452 12.5 11.9993 12.5ZM5.16993 19.7396C5.17312 18.6099 5.4089 17.1878 6.32675 16.0579C7.22019 14.9581 8.87181 14 11.9993 14C15.1268 14 16.7784 14.9581 17.6719 16.0579C18.5897 17.1878 18.8255 18.6099 18.8287 19.7396C18.8302 20.2686 18.3615 20.75 17.6302 20.75H6.36837C5.63711 20.75 5.16843 20.2686 5.16993 19.7396Z"/>
+                </svg>
+                <span>Войти</span>
+            </button>
+        </div>
+    </div>
 </header>
