--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -296,6 +296,251 @@ footer {
     // }
 }
 
+
+
+.header {
+    ._border-bottom {
+        border-bottom: 1px solid #E3E3E3;
+    }
+
+    &__logo {
+
+        a,
+        img {
+            display: block;
+        }
+    }
+
+    &__inner {
+        height: 123px;
+        display: flex;
+        align-items: center;
+    }
+
+    &__nav {
+        display: flex;
+        margin-left: 64px;
+        margin-right: auto;
+
+        li {
+            font-size: 16px;
+            line-height: 22px;
+
+            &+li {
+                margin-left: 24px;
+            }
+
+            a {
+                color: #404040;
+            }
+        }
+    }
+
+    &__tel {
+        font-size: 16px;
+        line-height: 22px;
+        display: block;
+        position: relative;
+        color: #404040;
+        font-weight: 600;
+        padding-left: 26px;
+        margin-right: 24px;
+
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-image: url(../images/phone.svg);
+            background-size: cover;
+            background-position: center;
+            width: 24px;
+            height: 24px;
+        }
+    }
+
+    &__btn {
+        font-size: 16px;
+        line-height: 22px;
+        color: #1374CF;
+        width: 110px;
+        height: 40px;
+        box-shadow: 0px 8px 24px rgba(12, 75, 134, 0.07);
+        border-radius: 4px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 0.3s all;
+
+        &:hover {
+            color: #1C89EF;
+            border: 2px solid #1C89EF;
+
+            svg {
+                fill: #1C89EF;
+            }
+
+        }
+
+        &:active {
+            color: #2F9AFD;
+            border: 2px solid #2F9AFD;
+
+            svg {
+                fill: #2F9AFD;
+            }
+        }
+
+        &:focus {
+            color: #1C89EF;
+            border: 2px solid #C5E2FF;
+            ;
+
+            svg {
+                fill: #1C89EF;
+            }
+
+            box-shadow: 0px 8px 24px rgba(12, 75, 134, 0.1);
+        }
+
+        &._success {
+            color: #4BB028;
+            border: 2px solid #4BB028;
+
+            svg {
+                fill: #4BB028;
+            }
+        }
+
+        svg {
+            fill: #1374CF;
+            margin-right: 5px;
+        }
+    }
+}
+
+.footer {
+    background-color: #07325B;
+    margin-top: 96px;
+
+    &__inner {
+
+        padding: 50px 0px;
+    }
+
+    &__top {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__nav {
+        display: flex;
+        margin-right: -24px;
+
+        li {
+            font-size: 16px;
+            line-height: 22px;
+            margin-right: 24px;
+
+            a {
+                color: white;
+            }
+        }
+    }
+
+    &__socials {
+        display: flex;
+        margin-right: -8px;
+
+        &-item {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #114E88;
+            width: 39px;
+            height: 39px;
+            border-radius: 50%;
+            margin-right: 8px;
+
+            &:hover {
+                background-color: #1374CF;
+            }
+
+            &:active {
+                background-color: #2F9AFD;
+            }
+
+            &._success {
+                background-color: #4BB028;
+            }
+
+            &:focus {
+                background-color: #2F9AFD;
+                border: 2px solid #2D75B9;
+            }
+
+            svg,
+            path {
+                fill: white;
+                stroke: none;
+            }
+        }
+    }
+
+    &__btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        background: #1374CF;
+        border-radius: 4px;
+        width: 124px;
+        height: 40px;
+        font-size: 16px;
+        line-height: 22px;
+
+        &:hover {
+            background-color: #1C89EF;
+            border-color: #1C89EF;
+        }
+
+        &:active {
+            background-color: #2F9AFD;
+            border-color: #2F9AFD;
+        }
+
+        &:focus {
+            border-color: #2D75B9;
+        }
+
+        &._success {
+            background-color: #4BB028;
+            border-color: #4BB028;
+        }
+
+        svg {
+            margin-right: 5px;
+            fill: white;
+        }
+    }
+
+    &__copyright {
+        margin-top: 40px;
+        display: flex;
+        justify-content: space-between;
+
+        span {
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 19px;
+            text-align: right;
+            color: #90B5D9;
+        }
+    }
+}
+
+
 .onboarding{
     &__title{
         margin-bottom: 4px;
