фиксированный блок "ваш выбор" в онбординге

--- a/src/css/_media.scss
+++ b/src/css/_media.scss
@@ -163,6 +163,9 @@
 }
 
 @media (max-width: 640px){
+    .wrapper{
+        padding-bottom: 122px;
+    }
     .onboarding{
         &__row{
             flex-direction: column;
