--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -209,6 +209,7 @@ button {
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    padding-bottom: 102px;
 }
 
 .content {
@@ -748,7 +749,10 @@ footer {
 }
 
 .footer-constructor{
-    margin-top: 24px;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
     padding: 16px 0;
     background-color: #FFFFFF;
     box-shadow: 0px -4px 16px rgba(51, 51, 61, 0.1);
