--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1009,6 +1009,7 @@ footer {
     .content-box{
         max-width: 100%;
         width: 100%;
+        min-width: 0;
     }
     .aside-constructor{
         margin-right: 24px;
@@ -1134,8 +1135,29 @@ footer {
             display: flex;
             align-items: center;
             justify-content: space-between;
+            &._pack{
+                .filling-product{
+                    &__image{
+                        align-self: flex-start;
+                    }
+                }
+            }
             & + .filling-product{
                 margin-top: 23px;
+            }
+            &__discount{
+                margin-top: 8px;
+                background-color: #1374CF;
+                box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.12);
+                border-radius: 100px;
+                font-weight: bold;
+                font-size: 14px;
+                line-height: 20px;
+                color: #FFFFFF;
+                height: 20px;
+                padding: 0 10px;
+                display: flex;
+                align-items: center;
             }
             &__info{
                 margin-right: auto;
@@ -1150,6 +1172,11 @@ footer {
                 line-height: 14px;
                 color: #595959;
                 margin-bottom: 2px;
+            }
+            &__text{
+                font-size: 12px;
+                line-height: 20px;
+                color: #595959;
             }
             &__name{
                 font-weight: bold;
@@ -1388,6 +1415,10 @@ footer {
             & + .filter-constructor__item{
                 margin-left: 16px;
             }
+            &._off{
+                color: #AAAAAA;
+                background-color: #F7F7F7;
+            }
             &._active{
                 font-weight: bold;
                 color: #1374CF;
@@ -1530,6 +1561,312 @@ footer {
             height: 44px;
             &.button{
                 padding: 0 24px;
+            }
+        }
+    }
+    .total-mob{
+        display: none;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        padding: 16px 0;
+        background-color: #FFFFFF;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+        border-radius: 16px 16px 0px 0px;
+        &__content{
+            overflow: hidden;
+            height: 0;
+            border-bottom: 1px solid transparent;
+            margin-bottom: 0px;
+            transition: height 500ms ease,
+                        margin-bottom 500ms ease,
+                        border-color 500ms ease;
+            &._active{
+                margin-bottom: 16px;
+                border-color: #F7F7F7;
+            }
+        }
+        &__scroll-content{
+            max-height: 200px;
+            overflow-y: auto;
+            padding-bottom: 16px;
+        }
+        &__list{
+            li{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                & + li{
+                    margin-top: 16px;
+                }
+            }
+            &-name{
+                font-weight: bold;
+                font-size: 12px;
+                line-height: 16px;
+            }
+            &-price{
+                font-size: 14px;
+                line-height: 20px;
+                display: flex;
+                align-items: center;
+                margin-left: 20px;
+                &-new{
+                    font-weight: bold;
+                }
+                &-old{
+                    color: #AAAAAA;
+                    text-decoration-line: line-through;
+                    margin-left: 8px;
+                }
+            }
+        }
+        &__inner{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        &__btn{
+            cursor: pointer;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 16px;
+            &::after{
+                content: '';
+                position: absolute;
+                top: 4px;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 32px;
+                height: 4px;
+                background-color: #E8E8E8;
+                border-radius: 100px;
+            }
+        }
+        &__title{
+            font-size: 12px;
+            line-height: 16px;
+            color: #595959;            
+        }
+        &__price{
+            display: flex;
+            align-items: center;
+            &-new{
+                font-weight: bold;
+                font-size: 18px;
+                line-height: 24px;
+            }
+            &-old{
+                font-size: 14px;
+                line-height: 19px;
+                text-decoration-line: line-through;
+                color: #595959;
+                margin-left: 8px;
+            }
+        }
+        &__discount{
+            font-size: 12px;
+            line-height: 16px;
+            color: #AAAAAA;
+        }
+        &__next{
+            height: 44px;
+            &.button{
+                font-weight: bold;
+                font-size: 14px;
+                line-height: 20px;
+                padding: 0 24px;
+            }
+        }
+    }
+
+    .inform{
+        margin-bottom: 24px;
+        background-color: rgba(0, 132, 255, 0.08);
+        border-radius: 4px;
+        font-size: 12px;
+        line-height: 20px;
+        color: #595959;
+        padding: 12px;
+        padding-left: 42px;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            left: 12px;
+            top: 12px;
+            width: 20px;
+            height: 20px;
+            background-image: url(../images/inform.svg);
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+    }
+
+    .packs{
+        &__content{
+            padding-top: 12px;
+            display: flex;
+            overflow-x: auto;
+        }
+        &__buy{
+            max-width: 100%;
+            width: 100%;
+            height: 38px;
+            margin-bottom: 17px;
+            &.button{
+                font-weight: 700;
+                font-size: 16px;
+                line-height: 22px;
+            }
+        }
+        &__more{
+            display: block;
+            max-width: max-content;
+            margin: 0 auto;
+            font-weight: bold;
+            font-size: 14px;
+            line-height: 20px;
+            color: #1374CF;
+        }
+        &__item{
+            display: flex;
+            flex-direction: column;
+            width: 256px;
+            min-width: 256px;
+            background-color: #FFFFFF;
+            border: 1px solid #E8E8E8;
+            box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.06);
+            & + .packs__item{
+                margin-left: 16px;
+            }
+            &-top{
+                background-color: #F7F7F7;
+                padding: 16px;
+            }
+            &-bottom{
+                margin-top: auto;
+                background-color: #F7F7F7;
+                padding: 16px;
+            }
+            &-inner{
+                padding: 16px;
+            }
+            &-logo{
+                margin-bottom: 20px;
+                img{
+                    display: block;
+                    width: auto;
+                    height: 22px;
+                }
+            }
+            &-type{
+                display: flex;
+                align-items: center;
+                span{
+                    font-weight: bold;
+                    font-size: 18px;
+                    line-height: 24px;
+                }
+            }
+            &-row{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+            &-discount{
+                box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.12);
+                border-radius: 4px;
+                background-color: #1374CF;
+                font-weight: bold;
+                font-size: 18px;
+                line-height: 24px;
+                color: #FFFFFF;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 40px;
+                padding: 0px 16px;
+                margin-left: 17px;
+            }
+            &-price{
+                &-new{
+                    font-weight: bold;
+                    font-size: 22px;
+                    line-height: 24px;
+                    color: #1374CF;
+                }
+                &-old{
+                    font-size: 16px;
+                    line-height: 22px;
+                    text-decoration-line: line-through;
+                    color: #595959;
+                }
+            }
+        }
+        &__cost{
+            display: flex;
+            margin-left: 8px;
+            &-icon{
+                & + .packs__cost-icon{
+                    margin-left: 2px;
+                }
+                &._active{
+                    svg path{
+                        fill: #1374CF
+                    }
+                }
+            }
+        }
+        &__products{
+            margin-top: 25px;
+            &-title{
+                font-size: 14px;
+                line-height: 20px;
+                color: #595959;
+                margin-bottom: 8px;
+            }
+        }
+        &__product{
+            display: flex;
+            align-items: center;
+            & + .packs__product{
+                margin-top: 12px;
+                padding-top: 12px;
+                border-top: 1px solid #E8E8E8;
+            }
+            &-box{
+                margin-left: 8px;
+            }
+            &-name{
+                font-size: 14px;
+                line-height: 20px;
+            }
+            &-code{
+                margin-top: 2px;
+                font-size: 14px;
+                line-height: 20px;
+                color: #595959;
+            }
+            &-price{
+                margin-top: 8px;
+                display: flex;
+                align-items: center;
+                &-new{
+                    font-weight: bold;
+                    font-size: 14px;
+                    line-height: 20px;
+                    color: #1374CF;
+                }
+                &-old{
+                    margin-left: 8px;
+                    font-size: 10px;
+                    line-height: 14px;
+                    color: #595959;
+                }
             }
         }
     }
