--- a/src/css/_media.scss
+++ b/src/css/_media.scss
@@ -18,6 +18,16 @@
         }
     }
     .constructor{
+        .packs{
+            &__items{
+                max-width: 100%;
+                margin-left: 0;
+            }
+            &-item{
+                width: 100%;
+                margin-left: 0;
+            }
+        }
         .total{
             &__price{
                 padding-right: 20px;
@@ -107,6 +117,57 @@
             &__content{
                 padding-top: 0;
             }
+            &-item{
+                flex-direction: column;
+                padding: 8px;
+                &__wrapper{
+                    max-width: 100%;
+                    width: 100%;
+                    align-items: center;
+                    flex-direction: row;
+                    margin-bottom: 12px;
+                }
+                &__image{
+                    order: 1;
+                    width: 30px;
+                    min-width: 30px;
+                    padding-bottom: 0;
+                    margin-right: 8px;
+                }
+                &__name{
+                    order: 2;
+                    margin-bottom: 0;
+                    margin-right: auto;
+                    span{
+                        display: inline-block;
+                    }
+                }
+                &__price{
+                    flex-direction: column;
+                    justify-content: flex-end;
+                    order: 3;
+                    margin-top: unset;
+                    margin-bottom: 0;
+                    margin-left: 16px;
+                }
+                &__list{
+                    margin-left: 0;
+                    li{
+                        font-size: 10px;
+                        line-height: 14px;
+                        padding-left: 15px;
+                        & + li{
+                            margin-top: 8px;
+                        }
+                        &::before{
+                            width: 2px;
+                            height: 2px;
+                            left: 6px;
+                            top: 6px;
+                        }
+                    }
+                }
+            }
         }
         .inform{
             margin-bottom: 16px;
@@ -124,6 +185,28 @@
                 padding: 0;
                 background-color: transparent;
                 box-shadow: none;
+            }
+            &-product{
+                &._pack{
+                    .filling-product__price-old{
+                        display: block;
+                    }
+                    .filling-product__discount{
+                        display: none;
+                    }
+                    .filling-product__text{
+                        order: -1;
+                        font-size: 10px;
+                        line-height: 14px;
+                    }
+                    .filling-product__image{
+                        align-self: unset;
+                    }
+                }
+                &__info{
+                    display: flex;
+                    flex-direction: column;
+                }
             }
             &__description{
                 background-color: transparent;
@@ -684,6 +767,9 @@
             &__item{
                 width: 212px;
                 min-width: 212px;
+                & + .packs__item{
+                    margin-left: 8px;
+                }
                 &-logo{
                     margin-bottom: 8px;
                     img{
@@ -717,6 +803,15 @@
                 &-title{
                     font-size: 12px;
                     line-height: 16px;
+                }
+            }
+            &__product{
+                &-name{
+                    font-size: 12px;
+                    line-height: 16px;
+                }
+                &-image{
+                    width: 32px;
                 }
             }
         }
