--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -405,6 +405,7 @@ footer {
             right: 16px;
             top: 50%;
             transform: translateY(-50%);
+            pointer-events: none;
             svg{
                 display: block;
             }
@@ -1140,6 +1141,9 @@ footer {
                     &__image{
                         align-self: flex-start;
                     }
+                    &__price-old{
+                        display: none;
+                    }
                 }
             }
             & + .filling-product{
@@ -1395,9 +1399,19 @@ footer {
 
     .filter-constructor{
         margin-bottom: 12px;
+        &__select._brand{
+            margin-left: 32px;
+            margin-right: auto;
+        }
         &__top{
             display: flex;
             overflow-x: auto;
+            &._packs{
+                margin-top: 16px;
+                .filter-constructor__item{
+                    height: 44px;
+                }
+            }
         }
         &__item{
             min-width: max-content;
@@ -1707,8 +1721,90 @@ footer {
     }
 
     .packs{
+        &-item{
+            width: calc(50% - 12px);
+            padding: 16px;
+            background-color: #FFFFFF;
+            box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.12);
+            border-radius: 4px;
+            display: flex;
+            margin-left: 12px;
+            margin-bottom: 12px;
+            &__wrapper{
+                display: flex;
+                flex-direction: column;
+                max-width: 117px;
+            }
+            &__name{
+                font-weight: bold;
+                font-size: 12px;
+                line-height: 16px;
+                margin-bottom: 16px;
+                span{
+                    display: block;
+                }
+            }
+            &__price{
+                margin-top: auto;
+                display: flex;
+                align-items: center;    
+                margin-bottom: 16px;
+                flex-shrink: 0;
+                &-new{
+                    font-weight: bold;
+                    font-size: 14px;
+                    line-height: 20px;
+                    color: #1374CF;
+                }
+                &-old{
+                    font-size: 10px;
+                    line-height: 14px;
+                    text-decoration-line: line-through;
+                    color: #595959;
+                    margin-left: 8px;
+                }
+            }
+            &__image{
+                width: 117px;
+                padding-bottom: 22px;
+                img{
+                    display: block;
+                    width: 100%;
+                }
+            }
+            &__list{
+                margin-left: 16px;
+                li{
+                    padding-left: 18px;
+                    position: relative;
+                    font-size: 12px;
+                    line-height: 16px;
+                    &::before{
+                        content: '';
+                        width: 4px;
+                        height: 4px;
+                        border-radius: 50%;
+                        position: absolute;
+                        left: 4px;
+                        top: 5px;
+                        background-color: #252525;
+                    }
+                    & + li{
+                        margin-top: 16px;
+                    }
+                }
+            }
+        }
+        &__items{
+            max-width: 738px;
+            display: flex;
+            flex-wrap: wrap;
+            margin-left: -12px;
+            margin-bottom: -12px;
+        }
         &__content{
             padding-top: 12px;
+            padding-bottom: 16px;
             display: flex;
             overflow-x: auto;
         }
@@ -1719,8 +1815,8 @@ footer {
             margin-bottom: 17px;
             &.button{
                 font-weight: 700;
-                font-size: 16px;
-                line-height: 22px;
+                font-size: 14px;
+                line-height: 20px;
             }
         }
         &__more{
@@ -1739,6 +1835,7 @@ footer {
             min-width: 256px;
             background-color: #FFFFFF;
             border: 1px solid #E8E8E8;
+            border-radius: 4px;
             box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.06);
             & + .packs__item{
                 margin-left: 16px;
@@ -1840,6 +1937,13 @@ footer {
             }
             &-box{
                 margin-left: 8px;
+            }
+            &-image{
+                width: 44px;
+                img{
+                    display: block;
+                    width: 100%;
+                }
             }
             &-name{
                 font-size: 14px;
