--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -629,7 +629,7 @@ footer {
             box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.06);
             border-radius: 4px;
             transition: border-color .3s;
-            & + &{
+            & + .plans-item{
                 margin-left: 20px;
             }
             &._selected{
@@ -678,7 +678,7 @@ footer {
         box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.06);
         border-radius: 4px;
         overflow: hidden;
-        & + &{
+        & + .package{
             margin-left: 40px;
         }
         &__image{
